--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Windows thumbnail db
+Thumbs.db
+
+# OSX files
+.DS_Store
+
 # Built application files
 *.apk
 *.ap_
@@ -12,6 +18,7 @@
 bin/
 gen/
 out/
+build/
 
 # Gradle files
 .gradle/
@@ -32,19 +39,23 @@ proguard/
 # Android Studio captures folder
 captures/
 
-# IntelliJ
+# Android Studio
+.idea
+.gradle
+/*/local.properties
+/*/out
+/*/*/build
+build
+/*/*/production
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/assetWizardSettings.xml
-.idea/dictionaries
-.idea/libraries
-.idea/caches
+*.iws
+*.ipr
+*~
+*.swp
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
-#*.jks
+*.jks
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
