--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,6 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-
-android {
-    compileSdkVersion 28
-    defaultConfig {
-        applicationId ApplicationId.id
-        minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 1
-        versionName "@string/app_version"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-}
+apply from: '../android_commons.gradle'
 
 dependencies {
-
+    implementation AndroidLibraries.appCompat
 }
