--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
+buildscript { 
+    ext.kotlin_version = '1.3.50'
+
     repositories {
         google()
         jcenter()
@@ -7,7 +9,7 @@ buildscript {
     }
     dependencies {
         classpath Libraries.gradle
-    }
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
 }
 
 allprojects {
