unit tests done on models<->dto converters

--- a/android_commons.gradle
+++ b/android_commons.gradle
@@ -13,8 +13,12 @@ android {
     }
 }
 
+apply plugin: 'kotlin-android'
+
 dependencies {
     implementation KotlinLibraries.kotlin
     implementation KotlinLibraries.kotlinAndroidExtensions
     implementation AndroidLibraries.liveData
+
+    testImplementation TestLibraries.junit
 }
