working tests for rewards DAO livedata requests

--- a/localdata/build.gradle
+++ b/localdata/build.gradle
@@ -13,5 +13,5 @@ dependencies {
     kapt Libraries.roomCompiler
 
     androidTestImplementation project(Modules.testutils)
-
+    androidTestImplementation TestLibraries.archCoreTest
 }
