more unit tests on rewardRepo, handle empty rewardDAO results

--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -14,9 +14,13 @@ dependencies {
     kapt Libraries.roomCompiler
 
     testImplementation project(Modules.testutils)
-    testImplementation TestLibraries.mockitoCore
     testImplementation TestLibraries.mockitoInline
 
     androidTestImplementation project(Modules.testutils)
     androidTestImplementation TestLibraries.archCoreTest
+    androidTestImplementation TestLibraries.mockitoCore
+
+    //not needed, but not adding these gets the IDE put Warnings on these packages, although code will compile and tests will run
+    testImplementation TestLibraries.mockitoCore
+    androidTestImplementation TestLibraries.mockitoInline
 }
