--- a/testutils/build.gradle
+++ b/testutils/build.gradle
@@ -4,4 +4,5 @@ apply from: '../android_commons.gradle'
 dependencies {
     implementation project(Modules.model)
     implementation project(Modules.localdata)
+    implementation project(Modules.repository)
 }
