--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -10,7 +10,7 @@ dependencies {
     implementation Libraries.roomRunTime
     implementation Libraries.roomKtx
 
-    annotationProcessor Libraries.roomCompiler
+//    annotationProcessor Libraries.roomCompiler
     kapt Libraries.roomCompiler
 
     testImplementation project(Modules.testutils)
