--- a/localdata/build.gradle
+++ b/localdata/build.gradle
@@ -9,7 +9,7 @@ dependencies {
     implementation Libraries.roomRunTime
     implementation Libraries.roomKtx
 
-//    annotationProcessor Libraries.roomCompiler
+    annotationProcessor Libraries.roomCompiler
     kapt Libraries.roomCompiler
 
     androidTestImplementation project(Modules.testutils)
