--- a/testutils/build.gradle
+++ b/testutils/build.gradle
@@ -2,7 +2,10 @@ apply plugin: 'com.android.library'
 apply from: '../android_commons.gradle'
 
 dependencies {
-    implementation project(Modules.model)
-    implementation project(Modules.localdata)
-    implementation project(Modules.repository)
+    androidTestImplementation project(Modules.model)
+    androidTestImplementation project(Modules.localdata)
+    androidTestImplementation project(Modules.repository)
+    testImplementation project(Modules.model)
+    testImplementation project(Modules.localdata)
+    testImplementation project(Modules.repository)
 }
