--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,5 +12,7 @@ dependencies {
     // crashlytics dependency
     implementation Libraries.crashlytics
 
+
+    implementation project(Modules.utils)
 }
 apply plugin: 'com.google.gms.google-services'
