--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = '1.3.50'
+
 
     repositories {
         google()
         jcenter()
-        maven {url 'https://maven.fabric.io/public'}
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath Libraries.gradle
         classpath KotlinLibraries.kotlinAndroidExtensions
         classpath Libraries.googleServices
         classpath Libraries.crashlyticsPlugin
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
