--- a/settings.gradle
+++ b/settings.gradle
@@ -5,7 +5,7 @@ include ':home'
 include ':settings'
 include ':session'
 include ':rewards'
-//include ':statistics'
+include ':statistics'
 //transverse modules
 include ':navigation'
 include ':utils'
@@ -21,3 +21,4 @@ project(':home').projectDir = new File('./features/home')
 project(':settings').projectDir = new File('./features/settings')
 project(':session').projectDir = new File('./features/session')
 project(':rewards').projectDir = new File('./features/rewards')
+project(':statistics').projectDir = new File('./features/statistics')
