updated doc and started linking features modules to navigation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,5 +14,6 @@ dependencies {
 
 
     implementation project(Modules.utils)
+    implementation project(Modules.navigation)
 }
 apply plugin: 'com.google.gms.google-services'
