--- a/features/session/build.gradle
+++ b/features/session/build.gradle
@@ -4,4 +4,6 @@ apply from: '../../android_commons.gradle'
 dependencies {
 
     implementation project(Modules.utils)
+    implementation project(Modules.navigation)
+
 }
