--- a/features/home/build.gradle
+++ b/features/home/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply from: '../../android_commons.gradle'
 
 dependencies {
+    implementation AndroidLibraries.appCompat
 
     implementation project(Modules.utils)
     implementation project(Modules.navigation)
