--- a/android_commons.gradle
+++ b/android_commons.gradle
@@ -30,6 +30,10 @@ android {
             includeAndroidResources = true
         }
     }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 }
 
 apply plugin: 'kotlin-android'
