--- a/android_commons.gradle
+++ b/android_commons.gradle
@@ -31,8 +31,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility 1.8
-        targetCompatibility 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -41,7 +41,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 dependencies {
-    implementation KotlinLibraries.kotlin
+    implementation KotlinLibraries.kotlinJdk7
     implementation AndroidLibraries.liveData
     implementation AndroidLibraries.coreRunTime //this is added to prevent a sub-dependency conflict between google-services and the rest
 
