--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,12 @@ apply from: '../android_commons.gradle'
 apply from: 'https://raw.githubusercontent.com/JakeWharton/SdkSearch/master/gradle/projectDependencyGraph.gradle'
 apply plugin: 'io.fabric'
 
+android{
+    defaultConfig {
+        applicationId ApplicationId.id
+    }
+}
+
 dependencies {
     implementation AndroidLibraries.appCompat
     implementation AndroidLibraries.constraintLayout
