--- a/navigation/build.gradle
+++ b/navigation/build.gradle
@@ -3,6 +3,6 @@ apply from: '../android_commons.gradle'
 
 dependencies {
 
-    implementation project(Modules.utils)
+    implementation project(Modules.commons)
 
 }
