--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        kotlin_version = '1.3.61'
+    }
     repositories {
         google()
         jcenter()
@@ -12,6 +15,7 @@ buildscript {
         classpath Libraries.crashlyticsPlugin
         //gradle plugin to manage dependencies updates
         classpath Libraries.gradleVersionsPlugin
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
