--- a/common.gradle
+++ b/common.gradle
@@ -39,6 +39,7 @@ android {
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'jacoco'
 
 dependencies {
     implementation KotlinLibraries.kotlinJdk7
@@ -48,4 +49,40 @@ dependencies {
     androidTestImplementation TestLibraries.junit
     androidTestImplementation TestLibraries.androidTestRunner
     testImplementation TestLibraries.junit
+}
+
+jacoco {
+    toolVersion = Versions.jacoco
+}
+
+tasks.withType(Test) {
+    jacoco.includeNoLocationClasses = true
+}
+
+//task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
+task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest']) {
+    group = 'Everyday'
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+
+    def fileFilter = [
+            '**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test*.*', 'android/**/*.*', '**/*$[0-9].*'
+    ]
+    def debugTree = fileTree(dir: "$project.buildDir/tmp/kotlin-classes/debug", excludes: fileFilter)
+    def mainSrc = "$project.projectDir/src/main/java"
+
+    sourceDirectories.from = files([mainSrc])
+    classDirectories.from = files([debugTree])
+    executionData.from = fileTree(dir: project.buildDir, includes: [
+            'jacoco/testDebugUnitTest.exec', 'outputs/code_coverage/debugAndroidTest/connected/**/*.ec'
+    ])
+}
+
+// This task launches the tests and copies the reports to /reports/ directory
+task everydayReport(type: Copy, dependsOn: 'jacocoTestReport') {
+    group = 'Everyday'
+    from "$buildDir/reports/"
+    into "../reports/$project.name"
 }
