--- a/models/build.gradle
+++ b/models/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-apply from: '../android_commons.gradle'
+apply from: '../common.gradle'
 
 dependencies {
     implementation project(':commons')
