--- a/repositories/build.gradle
+++ b/repositories/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply from: '../android_commons.gradle'
+apply from: '../common.gradle'
 
 dependencies {
     implementation project(Modules.models)
