--- a/testutils/build.gradle
+++ b/testutils/build.gradle
@@ -2,13 +2,7 @@ apply plugin: 'com.android.library'
 apply from: '../common.gradle'
 
 dependencies {
-    implementation project(Modules.models)
-    implementation project(Modules.locale)
-    implementation project(Modules.repositories)
-    implementation project(Modules.models)
-    androidTestImplementation project(Modules.locale)
-    androidTestImplementation project(Modules.repositories)
-    testImplementation project(Modules.models)
-    testImplementation project(Modules.locale)
-    testImplementation project(Modules.repositories)
+
+    implementation TestLibraries.mockitoCore
+    implementation TestLibraries.mockitoInline
 }
