--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,4 +14,12 @@ dependencies {
 
     implementation project(Modules.commons)
     implementation project(Modules.navigation)
+    implementation project(Modules.locale)
+    implementation project(Modules.models)
+    implementation project(Modules.navigation)
+    implementation project(Modules.repositories)
+    implementation project(Modules.screens)
+    implementation project(Modules.settings)
+
+    implementation Libraries.stetho
 }
