small refactor/cleaning prepared SharedPrefHelper and SesionPreset DAO+Entity classes

--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -4,5 +4,12 @@ apply from: '../common.gradle'
 dependencies {
 
     //commons should have no dependencies to any other module, but every other module might have to it
+
+    androidTestImplementation TestLibraries.archCoreTest
+    androidTestImplementation TestLibraries.mockitoCore
+
+    //not needed, but not adding these gets the IDE put Warnings on these packages, although code will compile and tests will run
+    testImplementation TestLibraries.mockitoCore
+    androidTestImplementation TestLibraries.mockitoInline
 }
 
