refactored Rewards to store individual fields for each body part instead of concatenated string + propagation of modification Critter parts resource holders + tests refactor done on RewardDao

--- a/models/build.gradle
+++ b/models/build.gradle
@@ -10,4 +10,11 @@ dependencies {
 
     annotationProcessor AndroidLibraries.roomCompiler
     kapt AndroidLibraries.roomCompiler
+
+    testImplementation project(Modules.testutils)
+    androidTestImplementation TestLibraries.mockitoCore
+
+    //not needed, but not adding these gets the IDE put Warnings on these packages, although code will compile and tests will run
+    testImplementation TestLibraries.mockitoCore
+    androidTestImplementation TestLibraries.mockitoInline
 }
