--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,5 @@ fastlane/readme.md
 reports/
 repositories/jacoco.exec
 documentation/.~lock._WORK_IN_PROGRESS.doc#
+documentation/~$ORK_IN_PROGRESS.doc
+documentation/~WRL0002.tmp
