--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation project(Modules.models)
     implementation project(Modules.repositories)
     implementation project(Modules.screens)
+    implementation project(Modules.domain)
 
     implementation Libraries.stetho
 }
