--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
+    kotlin_version = '1.3.72'
     }
     repositories {
         google()
@@ -12,6 +13,7 @@ buildscript {
         //gradle plugin to manage dependencies updates
         classpath Libraries.gradleVersionsPlugin
         classpath "org.jacoco:org.jacoco.core:0.8.5"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
