--- a/models/build.gradle
+++ b/models/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 apply from: '../common.gradle'
 
 dependencies {
-    implementation project(':commons')
+    implementation project(Modules.commons)
 
     implementation AndroidLibraries.roomCompiler
     implementation AndroidLibraries.roomRunTime
