improved theming and system immersion

--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -3,6 +3,7 @@ apply from: '../common.gradle'
 
 dependencies {
 
+    implementation AndroidLibraries.material
     implementation AndroidLibraries.appCompat
 
     //commons should have no dependencies to any other module, but every other module might have to it
