WIP on settings: module created, activity created, PreferenceFragmentCompat loaded. list of settings to implement in setttings.doc

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation project(Modules.repositories)
     implementation project(Modules.screens)
     implementation project(Modules.domain)
+    implementation project(Modules.settings)
 
     implementation Libraries.stetho
     implementation Libraries.lottie
