--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EveryDay">
         <activity
-            android:name=".views.SplashScreenActivity"
-            android:screenOrientation="sensorPortrait">
+            android:name=".views.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -27,6 +26,13 @@
             android:screenOrientation="sensorPortrait">
             <intent-filter>
                 <action android:name="fr.shining_cat.everyday.screens.views.ScreenActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="fr.shining_cat.everyday.settings.views.SettingsActivity">
+            <intent-filter>
+                <action android:name="fr.shining_cat.everyday.settings.views.SettingsActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
