--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ repositories/jacoco.exec
 documentation/.~lock._WORK_IN_PROGRESS.doc#
 documentation/~$ORK_IN_PROGRESS.doc
 documentation/~WRL0002.tmp
+__GRAPHICS/
