missing constants for previous commit handling DAO errors in RewardRepo removed Mockito replaced with mockK code formatting

--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -7,13 +7,15 @@ dependencies {
     implementation AndroidLibraries.appCompat
     implementation AndroidLibraries.constraintLayout
 
+    implementation Libraries.lottie
+
     //commons should have no dependencies to any other module, but every other module might have to it
 
+
+    testImplementation TestLibraries.mockk
     androidTestImplementation TestLibraries.archCoreTest
-    androidTestImplementation TestLibraries.mockitoCore
 
     //not needed, but not adding these gets the IDE put Warnings on these packages, although code will compile and tests will run
-    testImplementation TestLibraries.mockitoCore
-    androidTestImplementation TestLibraries.mockitoInline
+    androidTestImplementation TestLibraries.mockk
 }
 
