--- a/repositories/build.gradle
+++ b/repositories/build.gradle
@@ -7,13 +7,11 @@ dependencies {
     implementation project(Modules.commons)
 
     testImplementation project(Modules.testutils)
-    testImplementation TestLibraries.mockitoInline
+    testImplementation TestLibraries.mockk
 
     androidTestImplementation project(Modules.testutils)
     androidTestImplementation TestLibraries.archCoreTest
-    androidTestImplementation TestLibraries.mockitoCore
 
     //not needed, but not adding these gets the IDE put Warnings on these packages, although code will compile and tests will run
-    testImplementation TestLibraries.mockitoCore
-    androidTestImplementation TestLibraries.mockitoInline
+    androidTestImplementation TestLibraries.mockk
 }
