--- a/testutils/src/main/AndroidManifest.xml
+++ b/testutils/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="fr.shining_cat.everyday.testutils">
+<manifest package="fr.shining_cat.everyday.testutils">
 
 
 </manifest>
