WIP on Putting project back on tracks: updated dependencies bit of cleaning project builds, installs, and runs, tested ok ############# pb noted: topbar_button_cards_list caused errors because of value ?attr/colorOnPrimary for attribute android:fillColor => investigate, for now, replaced by hard-coded color

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 apply from: '../common.gradle'
-//TODO: check why it does not work anymore?
-//apply from: 'https://raw.githubusercontent.com/JakeWharton/SdkSearch/master/gradle/projectDependencyGraph.gradle'
+apply from: 'https://raw.githubusercontent.com/JakeWharton/SdkSearch/master/gradle/projectDependencyGraph.gradle'
 
-android{
+android {
     defaultConfig {
         applicationId ApplicationId.id
+        vectorDrawables.useSupportLibrary = true
     }
 }
 
