--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EveryDay">
-        <activity
-            android:name=".views.SplashScreenActivity">
+        <activity android:name=".views.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -29,8 +28,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="fr.shining_cat.everyday.settings.views.SettingsActivity">
+        <activity android:name="fr.shining_cat.everyday.settings.views.SettingsActivity">
             <intent-filter>
                 <action android:name="fr.shining_cat.everyday.settings.views.SettingsActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
