--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext {
-    kotlin_version = '1.3.72'
-    }
     repositories {
         google()
         jcenter()
@@ -12,8 +9,8 @@ buildscript {
         classpath KotlinLibraries.kotlinGradlePlugin
         //gradle plugin to manage dependencies updates: see gradle tasks help > dependencyUpdates
         classpath Libraries.gradleVersionsPlugin
-        classpath "org.jacoco:org.jacoco.core:0.8.5"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jacoco:org.jacoco.core:0.8.6"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}"
     }
 }
 
