fixed Android bug with vector path filltype evenOdd value ######################### prior to API 24, we can't use filltype=evenOdd in vectordrawables Android Studio will refuse to build but the error message qwill complain about android:fillColor="?attr/colorOnPrimary" being an invalid value It is not! problem is really with the filltype attribute, but we can't just delete it, because the filling of the vector will be broken (main symptom is the disappearance of "holes" in the design) read this article for a fullexplanation: https://blog.stylingandroid.com/vectordrawable-fill-windings/ go to this online converter tool to fix the problematic svg : https://svg2vector.com/ => upload the svg and check the box "Fix fill type" then download the fixed code

--- a/common.gradle
+++ b/common.gradle
@@ -8,7 +8,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
-        debug{
+        debug {
             testCoverageEnabled true
         }
         release {
@@ -44,7 +44,8 @@ apply plugin: 'jacoco'
 
 dependencies {
     implementation KotlinLibraries.kotlinJdk7
-    implementation AndroidLibraries.coreRunTime //this is added to prevent a sub-dependency conflict between google-services and the rest
+    implementation AndroidLibraries.coreRunTime
+    //this is added to prevent a sub-dependency conflict between google-services and the rest
 
     // Koin
     implementation Libraries.koin
